--- a/assets/styles/information.css
+++ b/assets/styles/information.css
@@ -1,11 +1,13 @@
 #information-section {
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    transition: max-height 0.3s ease-out, background-color 0.3s ease;
     display: flex;
     gap: 20px;
     max-height: 80vh;
     overflow-y: auto;
     padding: 10px;
+    background-color: var(--information-bg-color);
+    color: var(--text-color);
 }
 
 .information-wrapper {
@@ -40,7 +42,6 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: var(--info-background);
     color: var(--text-color);
     transition: transform 0.3s ease-in-out;
     z-index: 1000;
