--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -333,6 +333,10 @@ body.dark-mode #credits-mobile a {
         justify-content: space-between;
     }
 
+    #fullscreen-slider {
+        z-index: 1;
+    }
+
 
 
 }
