--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -3,8 +3,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* Changed from 100vh to 100% */
-    z-index: -1;
+    height: 100%; /* Ensure it covers the full viewport */
+    z-index: -1; /* Bring it to the front */
 }
 
 #project-slider img {
@@ -338,4 +338,10 @@ body.dark-mode {
         -webkit-mask-image: linear-gradient(to right, black 40%, transparent 50%);
         transition: mask-image 0.3s ease, -webkit-mask-image 0.3s ease;
     }
+
+    #project-slider {
+        z-index: 1; /* Bring it to the front */
+    }
+
 }
+
