--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -349,3 +349,21 @@ body.dark-mode {
 
 }
 
+
+.single-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.single-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+@media (max-width: 768px) {
+    .single-cover.mobile-contain {
+        object-fit: contain;
+    }
+}
