--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -99,7 +99,6 @@ h1 {
 a {
     font-family: 'SwizzyMedium', sans-serif;
     font-size: 1.125rem;   /* 18px */
-    line-height: 1.25rem;  /* 20px */
     color: white;
 }
 
@@ -125,6 +124,8 @@ li {
 .logo {
     position: relative;
     color: white;
+    display: flex;
+    align-items: center;
 }
 
 .nav-links {
@@ -306,6 +307,7 @@ body.dark-mode #dark-mode-toggle {
     position: relative;
     z-index: 10;
     text-decoration: none;
+    line-height: 1.25rem;  /* 20px */
 }
 
 .text-element {
@@ -357,6 +359,8 @@ body.dark-mode #credits-mobile a {
     }
 
     h1 {
+        margin: 0;
+        padding: 0;
         font-size: 0.875rem;     /* 14px */
         line-height: 1rem;       /* 16px */
     }
@@ -367,6 +371,14 @@ body.dark-mode #credits-mobile a {
 
     li {
         font-size: 0.625rem;     /* 10px */
+    }
+
+    .logo a {
+        line-height: 1rem;  /* 20px */
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: top;
     }
     
 
