--- a/assets/styles/grid.css
+++ b/assets/styles/grid.css
@@ -2,6 +2,7 @@ main {
     padding-top: 3.75rem; /* 60px */
 }
 
+/* Base styles for variant buttons */
 .grid-variant-selector {
     display: flex;
     position: fixed;
@@ -9,38 +10,47 @@ main {
     left: 50%;
     transform: translateX(-50%);
     z-index: 1001;
-    padding: 0.625rem; /* 10px */
-    gap: 0.3125rem; /* 5px */
+    padding: 0.625rem;
+    gap: 0.3125rem;
 }
 
-.variant-button, .variant-button-mobile {
-    width: 1.25rem; /* 20px */
-    height: 1.25rem; /* 20px */
+.variant-button {
+    width: 1.25rem;
+    height: 1.25rem;
     background: #e0e0e0;
     border-radius: 100%;
     border-style: none;
     cursor: pointer;
     font-family: 'SwizzyRegular', sans-serif;
-    font-size: 0.75rem; /* 12px */
-    padding: 0;
-    padding: 0.0625rem 0px 0px 0px; /* 1px 0 0 0 */
+    font-size: 0.75rem;
+    padding: 0.0625rem 0 0 0;
     transition: all 0.2s ease-in-out;
 }
 
-.variant-button.active, .variant-button-mobile.active {
+.variant-button.active {
     background: var(--text-color);
     color: var(--information-bg-color);
-    padding: 1px 0px 0px 0px;
+}
+
+/* Hover styles for non-active buttons */
+.variant-button:not(.active):hover {
+    width: 1.3rem;
+    height: 1.3rem;
+    background: var(--text-color);
+    color: var(--information-bg-color);
+}
+
+/* Change active button when hovering other buttons */
+.grid-variant-selector:hover .variant-button.active:not(:hover) {
+    background: #e0e0e0;
+    color: var(--text-color);
 }
 
 .variant-button-mobile {
     display: none;
 }
 
-.variant-button:hover {
-    width: 1.3rem; 
-    height: 1.3rem; 
-}
+
 
 #project-grid {
     display: grid;
@@ -164,7 +174,11 @@ main {
         display: block;
         background-color: black;
         color: white;
+        width: 1.25rem;
+        height: 1.25rem;
+        border-radius: 100%;
         font-size: 0.625rem; /* 10px */
+        border-style: none;
     }
 }
 
