--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -3,8 +3,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* Ensure it covers the full viewport */
-    z-index: 1; /* Bring it to the front */
+    height: 100%;
+    min-height: -webkit-fill-available;
+    z-index: 1;
 }
 
 #project-slider img {
@@ -369,3 +370,4 @@ body.dark-mode {
         object-fit: contain;
     }
 }
+
