--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -16,7 +16,7 @@
 .split-slide {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .split-left, .split-right {
@@ -57,7 +57,7 @@
 
 .contain-with-margin {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -294,7 +294,7 @@ body.dark-mode {
     .split-slide-mobile {
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 100%;
     }
 
     .split-slide-mobile .split-top,
