--- a/components/information.html
+++ b/components/information.html
@@ -1,7 +1,6 @@
     <div class="information-wrapper">
         <div id="about">
-            <h1>Based in Barcelona. She works mainly in analog format. Specialized in creative and fashion photography, she has also worked in still photography and BTS photography in several productions.</h1>
-            <h1>Graduated in Fine Arts at the Faculty of Fine Arts from the University of Barcelona (2018), she complements her artistic training for six years at Traç School (Barcelona), at the Institute of Photographic Studies of Catalonia (Barcelona) with monographic courses and at Eina school (Barcelona) with a Postgraduate Course in Photography and Editorial Design (2020).</h1>
+            <h1>Natàlia Cornudella (1996) is a fashion photographer based in Barcelona. Her work combines digital and film photography to suit the demands of each project. She works for fashion brands, and commercials, and also as a still photographer for the music industry. Although she navigates various formats, her style as a photographer has mainly centered on portraiture. She graduated from the Faculty of Fine Arts at the University of Barcelona in 2018 and complemented her degree with monographic courses at IEFC and a postgraduate course in photography and editorial design at Eina.</h1>
         </div>
         <div id="credits">
             <p>Design and Development, <a href="https://www.acanovas.info/">www.acanovas.info</a></p>
@@ -15,17 +14,19 @@
                 </div>
                 <div>
                     <ul>
+                        <li>Nike</li>
                         <li>Adidas</li>
                         <li>Estrella Damm</li>
-                        <li>Nike</li>
+                        <li>Cupra</li>
                         <li>Netflix</li>
-                        <li>Soccerbibile</li>
-                        <li>Neo2 Magazine</li>
-                        <li>Trax Magazine</li>
                         <li>Bad Gyal</li>
-                        <li>Quevedo</li>
+                        <li>Mushka</li>
                         <li>Belén Aguilera</li>
-                        <li>Alexia Putellas</li>
+                        <li>Nude Project</li>
+                        <li>Time Out</li>
+                        <li>Soccerbible</li>
+                        <li>Acero</li>
+                        <li>Vanidad</li>
                     </ul>
                 </div>
             </div>
