--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,9 +18,9 @@
 
 @font-face {
     font-family: 'SwizzyMedium';
-    src: url('../fonts/Swizzy-Medium.woff2') format('woff2'),
-         url('../fonts/Swizzy-Medium.woff') format('woff'),
-         url('../fonts/Swizzy-Medium.ttf') format('truetype');
+    src: url('../fonts/Natl-Medium.woff2') format('woff2'),
+         url('../fonts/Natl-Medium.woff') format('woff'),
+         url('../fonts/Natl-Medium.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
     font-display: swap;
@@ -28,9 +28,9 @@
 
 @font-face {
     font-family: 'SwizzyRegular';
-    src: url('../fonts/Swizzy-Regular.woff2') format('woff2'),
-         url('../fonts/Swizzy-Regular.woff') format('woff'),
-         url('../fonts/Swizzy-Regular.ttf') format('truetype');
+    src: url('../fonts/Natl-Regular.woff2') format('woff2'),
+         url('../fonts/Natl-Regular.woff') format('woff'),
+         url('../fonts/Natl-Regular.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
     font-display: swap;
